# anna-assistant

./: .gitignore  .pre-commit-config.yaml  .release-notes-v1.0-draft.md  1  1.0_CRITICAL_ISSUES.md  ALPHA7_SUMMARY.md  ALPHA97_PROGRESS.md  ALPHA98_SUMMARY.md  ANNA_COMPLETE_FEATURES.md  ANNA_HYPRLAND_DESIGN.md  ARCHITECTURE.md  AUTOMATION-COMPLETE.md  AUTONOMOUS_WORK_SESSION.md  BETA_271_NOTES.md  BETA_84_ANALYSIS.md  BETA_85_FINAL_REPORT.md  BETA_86_IMPLEMENTATION_PLAN.md  BETA_86_PROGRESS_REPORT.md  BUGFIX_SUMMARY.md  CAPABILITIES_REPORT.md  CHANGELOG-Beta86.md  CHANGELOG.md  CHANGELOG_v0122.md  CHECK-GITHUB-ACTIONS.md  CLAUDE.md  CLEAN-INSTALL-v0.12.2.md  CLEANUP-SUMMARY.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT-INSTRUCTIONS.md  DESIGN-NOTE-privilege-model.md  DESIGN_ID_SYSTEM.md  DISTRIBUTION-UPGRADE-SUMMARY.md  Dockerfile.testnet  FACTS_CATALOG.md  FEATURES.md  FEATURE_INVENTORY_6x.md  FINAL-COMPLETE-SUMMARY.md  FINAL-STATUS.md  FINAL_BETA69_REPORT.md  (+148 more)
cmd/annad/: Cargo.toml
cmd/annad/src/: config.rs  journal.rs  main.rs  plan.rs  sysinfo.rs
crates/anna-shared/: Cargo.toml  build.rs
crates/anna-shared/src/: achievements.rs  advice.rs  answer_contract.rs  brief.rs  budget.rs  change.rs  change_history.rs  change_transaction.rs  citation.rs  citations.rs  claims.rs  clarify.rs  clarify_v2.rs  config_intent.rs  dialogue.rs  editor_recipe_data.rs  editor_recipes.rs  error.rs  event_log.rs  facts.rs  facts_types.rs  fastpath.rs  git_recipes.rs  greetings.rs  grounding.rs  guard.rs  health_brief.rs  health_delta.rs  health_view.rs  helpers.rs  intake.rs  inventory.rs  ledger.rs  lib.rs  model_registry.rs  model_selector.rs  narrator.rs  package_recipes.rs  pending.rs  person_stats.rs  (+43 more)
crates/anna-shared/tests/: advice_tests.rs  budget_tests.rs  change_tests.rs  clarify_tests.rs  clarify_v2_tests.rs  facts_tests.rs  fastpath_tests.rs  health_delta_tests.rs  probe_spine_tests.rs  recipe_tests.rs  reliability_tests.rs  report_tests.rs  review_tests.rs  snapshot_tests.rs  specialists_tests.rs  stabilization_tests.rs  stats_tests.rs  ticket_packet_tests.rs  trace_tests.rs  transcript_tests.rs  version_consistency.rs
crates/anna_common/: Cargo.toml
crates/anna_common/src/: action_engine.rs  action_episodes.rs  action_executor.rs  action_plan.rs  action_plan_v3.rs  action_proposal.rs  action_risk.rs  advice_cache.rs  alert_detectors.rs  alert_probes.rs  anna_config.rs  anna_hardware_profile.rs  anna_self_health.rs  anomaly_engine.rs  answer_formatter.rs  answer_shaper.rs  answer_validator.rs  append_line_mutation.rs  arch_wiki_corpus.rs  atomic_write.rs  audio.rs  audio_doctor.rs  audit_log.rs  auto_install.rs  auto_tune.rs  backup_detection.rs  beautiful.rs  bench.rs  bench_snow_leopard.rs  boot.rs  boot_doctor.rs  boot_snapshot.rs  boot_timeline.rs  brain.rs  brain_fast.rs  caretaker_brain.rs  case_coordinator.rs  case_engine.rs  case_file_v081.rs  case_file_v1.rs  (+320 more)
crates/anna_common/tests/: acts_v1.rs
crates/annactl/: Cargo.toml  build.rs
crates/annactl/src/: action_executor.rs  action_plan_executor.rs  adaptive_help.rs  approval_ui.rs  ask_user.rs  autonomy_command.rs  brain_command.rs  change_commands.rs  chronos_commands.rs  cli.rs  cli_output.rs  client.rs  collective_commands.rs  commands.rs  config_command.rs  conscience_commands.rs  consensus_commands.rs  context_detection.rs  context_engine.rs  daily_command.rs  dashboard.rs  debug.rs  deterministic_answers.rs  diagnostic_formatter.rs  dialogue_v3_json.rs  discard_command.rs  display.rs  empathy_commands.rs  errors.rs  first_run.rs  greeting.rs  hardware_questions.rs  health.rs  health_commands.rs  help_commands.rs  historian_cli.rs  init_command.rs  install_command.rs  intent_router.rs  internal_dialogue.rs  (+69 more)
crates/annactl/tests/: acts_v2_cli.rs  acts_v2_user_flows.rs  acts_v3_commands.rs  acts_v4_wiki_engine.rs  cli_tests.rs  integration_test.rs  plan_cli_test.rs  qa_determinism.rs  regression_daily_snapshot_content.rs  regression_health_consistency.rs  regression_health_content.rs  regression_nl_big.rs  regression_nl_end_to_end.rs  regression_nl_routing_beta275.rs  regression_nl_routing_beta276.rs  regression_nl_routing_beta277.rs  regression_nl_smoke.rs  regression_proactive_consistency.rs  regression_proactive_plumbing.rs  regression_proactive_surfacing.rs  regression_proactive_v2_beta273.rs  regression_sysadmin_network.rs  regression_sysadmin_network_remediation.rs  regression_sysadmin_remediation_core.rs  regression_sysadmin_report_beta278.rs  regression_tui_health.rs  selftest_cli_test.rs  status_output_validation.rs  test_tui_streaming_beta280.rs  transcript_render_tests.rs  ux_regression_tests.rs
crates/annactl/tests_legacy/: README.md
crates/annad/: Cargo.toml  build.rs
crates/annad/src/: action_handlers.rs  action_history.rs  answers.rs  audit.rs  auto_update.rs  auto_updater.rs  autonomy.rs  benchmark.rs  benchmark_scheduler.rs  cinnamon_config.rs  collectors.rs  config.rs  daemon_health.rs  deterministic.rs  executor.rs  fast_path_handler.rs  git_config.rs  gnome_config.rs  handlers.rs  hardware.rs  health.rs  health_brief_builder.rs  historian_integration.rs  hyprland_config.rs  i3_config.rs  intelligent_recommender.rs  kde_config.rs  lib.rs  llm_bootstrap.rs  lxqt_config.rs  main.rs  mate_config.rs  model_registry_fetcher.rs  notifier.rs  ollama.rs  parsers.rs  permissions.rs  probe_answers.rs  probe_runner.rs  probes.rs  (+45 more)
crates/annad/tests/: acceptance_scenarios.rs  answers_tests.rs  baseline_tests.rs  benchmark_snow_leopard.rs  deterministic_tests.rs  dry_run_checker.rs  grounding_tests.rs  health_cli_tests.rs  historian_storage_beta279.rs  integration_tests.rs  integrity_suite.rs  learning_contract_tests.rs  learning_speed_canonical.rs  lifecycle_correctness_tests.rs  orchestration_tests.rs  proactive_historian_beta279.rs  property_tests.rs  redaction_tests.rs  router_corpus_tests.rs  router_tests.rs  service_desk_tests.rs  socket_security_test.rs  status_consistency_tests.rs  (+6 more)
src/anna_common/: Cargo.toml
src/annactl/: Cargo.toml  build.rs
src/annad/: Cargo.toml  build.rs
(+1145 files in other folders)
