[workspace]
resolver = "2"
members = [
    "crates/annad",
    "crates/annactl",
    "crates/anna_common",
    "tools/consensus_sim",
]

[workspace.package]
version = "5.7.0-beta.138"
edition = "2021"
authors = ["Anna Assistant Team"]
license = "GPL-3.0-or-later"
repository = "https://github.com/jjgarcianorway/anna-assistant"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# System info
sysinfo = "0.30"
num_cpus = "1.16"

# CLI
clap = { version = "4.0", features = ["derive", "cargo"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Unix socket
tokio-stream = "0.1"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Terminal formatting
owo-colors = "4.0"
console = "0.15"
indicatif = "0.17"  # Beta.108: Professional thinking animations

# TUI (Phase 5.7)
ratatui = "0.26"
crossterm = "0.27"

# File system watching
notify = "6.1"
walkdir = "2.4"  # Beta.84: Directory traversal for file indexing

# Cryptography (Phase 1.8)
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
sha2 = "0.10"
rand = "0.8"
hex = "0.4"

# Configuration
toml = "0.8"

# Networking (Phase 1.9)
axum = "0.7"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "cors", "timeout", "limit"] }
hyper = { version = "1.0", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "http2", "tokio"] }
http-body-util = "0.1"

# TLS (Phase 1.11 + 1.12)
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2.1"

# Metrics (Phase 1.9)
prometheus = { version = "0.13", features = ["process"] }

# Caching (Phase 1.11)
lru = "0.12"

# Database (Phase 3.6 - Persistent Context)
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
tokio-rusqlite = "0.5"
