[workspace]
resolver = "2"
members = [
    "crates/annad",
    "crates/annactl",
    "crates/anna_common",
]

[workspace.package]
version = "5.6.0"
edition = "2021"
authors = ["Anna Assistant Team"]
license = "GPL-3.0-or-later"
repository = "https://github.com/jjgarcianorway/anna-assistant"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# System info
sysinfo = "0.30"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# HTTP server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Configuration
toml = "0.8"

# Regex
regex = "1.10"

# Terminal formatting
owo-colors = "4.0"

# Database (knowledge store)
rusqlite = { version = "0.31", features = ["bundled"] }

# File system watching
notify = "6.1"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }
