[workspace]
resolver = "2"
members = [
    "crates/anna-shared",
    "crates/annad",
    "crates/annactl",
]

[workspace.package]
version = "0.0.32"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/jjgarcianorway/anna-assistant"

[workspace.dependencies]
anna-shared = { path = "crates/anna-shared" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
regex = "1.10"
