[package]
name = "anna-shared"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
regex.workspace = true
dirs = "5.0"

[build-dependencies]
chrono = "0.4"

[dev-dependencies]
tempfile = "3.10"
