[package]
name = "anna_common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
toml.workspace = true
regex.workspace = true
owo-colors.workspace = true
dirs = "5.0"

[dev-dependencies]
tempfile = "3"
