[package]
name = "anna_common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
toml.workspace = true
regex.workspace = true
owo-colors.workspace = true
rusqlite.workspace = true
uuid.workspace = true
tracing.workspace = true
terminal_size.workspace = true
reqwest.workspace = true
futures-util.workspace = true
dirs = "5.0"
tokio = { workspace = true }
lazy_static = "1.4"
libc = "0.2"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
