[package]
name = "annactl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "annactl"
path = "src/lib.rs"

[[bin]]
name = "annactl"
path = "src/main.rs"

[dependencies]
anna_common = { path = "../anna_common" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
console = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
textwrap = "0.16"
reqwest = { version = "0.11", features = ["json"] }
clap_complete = "4.5"
owo-colors = "4.1"
libc = "0.2" # For TTY detection (Phase 3.8)
dirs = "5.0" # For XDG/home directory detection (Phase 3.9.1)
sha2 = { workspace = true } # For checksum verification (Phase 3.10)
rusqlite = { workspace = true }
regex = "1.10" # For structured LLM output parsing (Beta.54)
sysinfo = { workspace = true } # For system metrics in TUI (Phase 5.7)
toml = { workspace = true } # For personality export (Beta.87)
indicatif = { workspace = true } # Beta.108: Professional thinking animations
