[package]
name = "annactl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "annactl"
path = "src/main.rs"

[dependencies]
anna_common = { path = "../anna_common" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
chrono.workspace = true
reqwest.workspace = true
owo-colors.workspace = true
sysinfo.workspace = true
toml.workspace = true
dirs = "5.0"
