[package]
name = "annactl"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "annactl"
path = "src/main.rs"

[dependencies]
anna-shared.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
clap.workspace = true
