[package]
name = "annad"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "annad"
path = "src/main.rs"

[dependencies]
anna-shared.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
chrono.workspace = true
