[package]
name = "annad"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "annad"
path = "src/main.rs"

[dependencies]
anna-shared.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
chrono.workspace = true
uuid.workspace = true
clap.workspace = true
regex = "1.10"

[dev-dependencies]
regex = "1.10"
