[package]
name = "anna_common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
once_cell = "1.19"
libc = { workspace = true }
serde_yaml = "0.9"
terminal_size = "0.3"
