[package]
name = "annactl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "annactl"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
nix = { workspace = true }
chrono = { workspace = true }
dirs = "5.0"

# Internal dependencies
anna_common = { path = "../anna_common" }
