[package]
name = "annactl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "annactl"
path = "src/main.rs"

[dependencies]
# Core dependencies for v0.10.1 pure CLI
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "io-util", "net"] }
anyhow = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
serde_yaml = "0.9"
which = { workspace = true }
libc = { workspace = true }
chrono = { workspace = true }
hostname = { workspace = true }
anna_common = { path = "../anna_common" }
