[package]
name = "annad"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "annad"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio-stream = { workspace = true }
nix = { workspace = true }
libc = { workspace = true }
toml = { workspace = true }
which = { workspace = true }
chrono = { workspace = true }
serde_yaml = "0.9"
uuid = { version = "1.0", features = ["v4", "serde"] }
tempfile = "3.8"
